--- a/cardapiosemanal.css
+++ b/cardapiosemanal.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    background-color: green;
+    background-color: rgb(56, 73, 56);
   }
   main {
     padding: 20px 0px;
