--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ nav li a:hover{
 }
 .banner{
     height: 100vh;
-    background: linear-gradient( rgba(13, 14, 13, 0.795), rgba(143, 81, 81, 0.308)),url('school-blackboard_1048-4547.jpg');
+    background: linear-gradient( rgba(13, 14, 13, 0.795), rgba(143, 81, 81, 0.308)),url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fsuperpoderes.fandom.com%2Fwiki%2FFisiologia_de_Gato_de_Cheshire&psig=AOvVaw3I_qqtDxFuNUoVKLiaE56v&ust=1725031416957000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMjK8frAmogDFQAAAAAdAAAAABAt');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
