--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ nav li a:hover{
 }
 .banner{
     height: 100vh;
-    background: linear-gradient( rgba(13, 14, 13, 0.795), rgba(143, 81, 81, 0.308)),url('https://www.google.com/url?sa=i&url=https%3A%2F%2Faminoapps.com%2Fc%2Famino-descendentes%2Fpage%2Fitem%2Fgato-de-cheshire%2Fqk5E_Kx1T3Iw1JqK3WvP1VQ2jWVj8NKPlKk&psig=AOvVaw3I_qqtDxFuNUoVKLiaE56v&ust=1725031416957000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMjK8frAmogDFQAAAAAdAAAAABBA');
+    background: linear-gradient( rgba(13, 14, 13, 0.795), rgba(143, 81, 81, 0.308)),url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fengenhariae.com.br%2Fciencia%2Fa-possibilidade-de-o-efeito-quantico-do-gato-cheshire-nao-ser-real-entenda&psig=AOvVaw3I_qqtDxFuNUoVKLiaE56v&ust=1725031416957000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqGAoTCMjK8frAmogDFQAAAAAdAAAAABCsAQ');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
