--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ nav li a:hover{
 }
 .banner{
     height: 100vh;
-    background: linear-gradient( rgba(13, 14, 13, 0.795), rgba(143, 81, 81, 0.308)),url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fengenhariae.com.br%2Fciencia%2Fa-possibilidade-de-o-efeito-quantico-do-gato-cheshire-nao-ser-real-entenda&psig=AOvVaw3I_qqtDxFuNUoVKLiaE56v&ust=1725031416957000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqGAoTCMjK8frAmogDFQAAAAAdAAAAABCsAQ');
+    background: linear-gradient( rgba(13, 14, 13, 0.795), rgba(143, 81, 81, 0.308)),url('img/WhatsApp-Image-2024-01-22-at-17.34.43.jpeg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
